[gd_scene load_steps=10 format=3 uid="uid://06idny2ui12l"]

[ext_resource type="Script" path="res://Assets/UI/pause_menu/pause_menu.gd" id="1_76xee"]
[ext_resource type="Shader" path="res://Assets/UI/pause_menu/PauseMenu.gdshader" id="1_gy7pp"]
[ext_resource type="FontFile" uid="uid://blykbpqefuxbh" path="res://TooMuchInk.ttf" id="3_gtgfm"]
[ext_resource type="PackedScene" uid="uid://b4akratys6jl" path="res://Assets/UI/options_menu/options_menu.tscn" id="4_tyxt5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m4eid"]
shader = ExtResource("1_gy7pp")
shader_parameter/amount = 3.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o535t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjatd"]
bg_color = Color(0.733005, 0.733005, 0.733005, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ncg5"]
bg_color = Color(0.396889, 0.396889, 0.396889, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_anuow"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.207843)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_76xee")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_m4eid")
offset_left = -140742.0
offset_top = -30295.0
offset_right = 181985.0
offset_bottom = 87057.0

[node name="MenuButtons" type="VBoxContainer" parent="."]
offset_left = 60.0
offset_top = 160.0
offset_right = 459.0
offset_bottom = 397.0
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_fonts/font = ExtResource("3_gtgfm")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_o535t")
theme_override_styles/hover = SubResource("StyleBoxFlat_qjatd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5ncg5")
theme_override_styles/normal = SubResource("StyleBoxFlat_anuow")
text = "Resume"
metadata/_edit_use_anchors_ = true

[node name="Options" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_fonts/font = ExtResource("3_gtgfm")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_o535t")
theme_override_styles/hover = SubResource("StyleBoxFlat_qjatd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5ncg5")
theme_override_styles/normal = SubResource("StyleBoxFlat_anuow")
text = "Options"
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_fonts/font = ExtResource("3_gtgfm")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_o535t")
theme_override_styles/hover = SubResource("StyleBoxFlat_qjatd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5ncg5")
theme_override_styles/normal = SubResource("StyleBoxFlat_anuow")
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="MenuTitle" type="Label" parent="."]
offset_left = -1.0
offset_top = 1.0
offset_right = 532.0
offset_bottom = 147.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("3_gtgfm")
theme_override_font_sizes/font_size = 60
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OptionsMenu" parent="CanvasLayer" instance=ExtResource("4_tyxt5")]
visible = false

[connection signal="pressed" from="MenuButtons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MenuButtons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MenuButtons/Exit" to="." method="_on_exit_pressed"]
